fix issue with wrong fontawesome icon that show odd char on firefox

--- a/src/app/shared/form/builder/ds-dynamic-form-ui/models/scrollable-dropdown/dynamic-scrollable-dropdown.component.scss
+++ b/src/app/shared/form/builder/ds-dynamic-form-ui/models/scrollable-dropdown/dynamic-scrollable-dropdown.component.scss
@@ -26,7 +26,7 @@
 }
 
 .scrollable-dropdown-toggle {
-  padding: 0.70rem;
+  padding:  0.70rem 0.70rem 0 0.70rem ;
 }
 
 .scrollable-dropdown-input[readonly]{
